--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body{
 
 .logo__liner {
 	margin: 80px 0 0 86px;
+	width: 146px;
+	height: 54px;
+	background: url(image/Vector.svg) no-repeat;
 }
 
 .menu {
@@ -103,4 +106,14 @@ body{
 	max-width: 253px;
 	max-height: 379px;
 	margin: 262px 0 0 34px;
+}
+@media(min-width: 1366px) and (max-width: 1840px){
+.wrapper{
+		width: 84%
+	}
+.logo__liner{
+	width: 106px;
+	height: 39px;
+}
+
 }
