--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 }
 
 .menu {
-	margin: 75px 0 0 0;
+	margin: 94px 0 0 0;
 }
 #menu__burger{
 	display: none;
@@ -59,7 +59,7 @@ body{
 
 .main-content-left {
 	margin: 206px 0 0 92px;
-	background: url(image/Bali.svg) no-repeat ;
+	background: url(image/Bali.png) no-repeat ;
 }
 
 .main-content-left__title {
@@ -72,7 +72,7 @@ body{
 .main-content-left__subtitle {
 	font: 22px/26px MuseoSansCurl, arial helvetica,sans-serif;
 	color: #F8EEE4;
-	margin: 19px 0 55px 16px;
+	margin: 19px 0 61px 16px;
 }
 
 .main-content-left__button {
@@ -91,29 +91,317 @@ body{
 }
 
 .main-content-right__image_one {
-	max-width:317px;
-	max-height:421px;
-	margin: 242px 0 0 300px;
+	width:317px;
+	height:421px;
+	margin: 249px 0 0 300px;
+	background: url(image/one-min.png) no-repeat;
 }
 
 .main-content-right__image_two {
-	max-width: 284px;
-	max-height: 379px;
-	margin: 262px 0 0 34px;
+	width: 284px;
+	height: 379px;
+	margin: 269px 0 0 34px;
+	background: url(image/two-min.png)no-repeat;
 }
 
 .main-content-right__image_three {
-	max-width: 253px;
-	max-height: 379px;
-	margin: 262px 0 0 34px;
+	width: 253px;
+	height: 379px;
+	margin: 269px 0 0 34px;
+	background: url(image/three-min.png)no-repeat;
 }
+
 @media(min-width: 1366px) and (max-width: 1840px){
-.wrapper{
-		width: 84%
+	.wrapper{
+			width: 92%
+		}
+
+	.logo__liner{
+		margin: 55px 0 0 80px;
+		width: 104px;
+		height: 39px;
+		background-size: contain;
 	}
-.logo__liner{
-	width: 106px;
-	height: 39px;
+
+	.menu {
+		margin: 64px 0 0 0;
+	}
+
+	.menu__item{
+		font: 16px/19px MuseoSansCurl, arial helvetica,sans-serif;
+	}
+
+	.menu__item:nth-child(1){
+		margin: 0 22px 0 0;
+	}
+
+	.menu__item:nth-child(2){
+		margin: 0 24px 0 0;
+	}
+
+	.menu__item:nth-child(3){
+		margin: 0 26px 0 0;
+	}
+
+	.menu__item:nth-child(4){
+		margin: 0 25px 0 0;
+	}
+	.menu__item:nth-child(5){
+		margin: 0 21px 0 0;
+	}
+
+	.main-content-left{
+		width: 375px;
+		height: 265px;
+		margin: 150px 0 0 85px;
+		background-size: contain;
+	}
+
+	.main-content-left__title {
+		font: 70px/93px pt serif, arial helvetica,sans-serif;
+		margin: 108px 0 0 54px; 
+	}
+
+	.main-content-left__subtitle {
+		font: 16px/19px MuseoSansCurl, arial helvetica,sans-serif;
+		width: 390px;
+		margin: 14px 0 36px 8px;
+	}
+
+	.main-content-left__button{
+		font: 16px/19px MuseoSansCurl, arial helvetica,sans-serif;
+		padding: 14px 64px 14px 66px;
+		margin: 0 0 0 9px;
+	}
+
+	.main-content-right__image_one {
+		width:225px;
+		height:300px;
+		margin: 177px 0 0 221px;
+		background-size: contain;
+	}
+
+	.main-content-right__image_two {
+		width: 202px;
+		height: 270px;
+		margin: 192px 0 0 25px;
+		background-size: contain;
+	}
+
+	.main-content-right__image_three {
+		width: 180px;
+		height: 270px;
+		margin: 190px 0 0 23px;
+		background-size: contain;
+	}
 }
+
+@media(min-width: 1024px) and (max-width: 1360px){
+	.wrapper{
+		width: 94%
+	}
+
+	.logo__liner{
+		margin: 55px 0 0 4px;
+		width: 104px;
+		height: 39px;
+		background-size: contain;
+	}
+
+	.menu {
+		margin: 68px 0 0 0;
+	}
+
+	.menu__item{
+		font: 16px/19px MuseoSansCurl, arial helvetica,sans-serif;
+	}
+
+	.menu__item:nth-child(1){
+		margin: 0 22px 0 0;
+	}
+
+	.menu__item:nth-child(2){
+		margin: 0 24px 0 0;
+	}
+
+	.menu__item:nth-child(3){
+		margin: 0 26px 0 0;
+	}
+
+	.menu__item:nth-child(4){
+		margin: 0 25px 0 0;
+	}
+	.menu__item:nth-child(5){
+		margin: 0;
+	}
+
+	.main-content-left{
+		width: 375px;
+		height: 265px;
+		margin: 152px 0 0 7px;
+		background-size: contain;
+
+	}
+
+	.main-content-left__title {
+		font: 70px/93px pt serif, arial helvetica,sans-serif;
+		margin: 108px 0 0 54px; 
+	}
+
+	.main-content-left__subtitle {
+		font: 16px/19px MuseoSansCurl, arial helvetica,sans-serif;
+		width: 390px;
+		margin: 14px 0 36px 8px;
+	}
+
+	.main-content-left__button{
+		font: 16px/19px MuseoSansCurl, arial helvetica,sans-serif;
+		padding: 14px 64px 14px 66px;
+		margin: 0 0 0 9px;
+	}
+
+	.main-content-right__image_one {
+		width:225px;
+		height:300px;
+		margin: 178px 0 0 91px;
+		background-size: contain;
+	}
+
+	.main-content-right__image_two {
+		width: 202px;
+		height: 270px;
+		margin: 192px 0 0 25px;
+		background-size: contain;
+	}
+
+	.main-content-right__image_three {
+		width: 180px;
+		height: 270px;
+		margin: 190px 0 0 23px;
+		background-size: contain;
+	}
+}
+
+@media(max-width: 1023px){
+	.wrapper{
+		width: 96%
+	}
+
+	.logo__liner{
+		width: 104px;
+		height: 39px;
+		background-size: contain;
+		margin: 35px 0 0 27px;
+	}
+	.menu{
+		margin: 186px 0 0 0;
+		display:block;
+		position: fixed;
+		visibility:hidden ;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		list-style: none;
+		background: #fff;
+	}
+
+	.menu__item{
+		text-align: center;
+		display: block;
+		color: #000;
+		font:500 30px/35px Roboto arial,helvetica,sans-serif;
+		padding-bottom: 24px;
+	}
+	#menu__burger{
+		opacity: 0;
+	}
+
+	#menu__burger:checked ~ .menu__button span{
+		transform:rotate(45deg);
+	}
+
+	#menu__burger:checked ~ .menu__button span::before{
+		top: 0;
+		transform: rotate(0);
+	}
+
+	#menu__burger:checked ~ .menu__button span::after{
+		top: 0;
+		transform: rotate(90deg);
+	}
+
+	#menu__burger:checked ~ .menu {
+		visibility: visible;
+		right: 0;
+	}
+
+	.main-content-right__image{
+		display: none;
+	}
+
+	.main-content-left{
+		width: 318px;
+		height: 226px;
+		background-size: contain;
+		margin: 100px 0 0 0;
+
+	}
+	.main-content-left__title{
+		font: 60px/79px pt serif, arial helvetica,sans-serif;
+		margin: 106px 0 0 59px;
+	}
+
+	.main-content-left__subtitle {
+		font: 18px/21px MuseoSansCurl, arial helvetica,sans-serif;
+		margin: 38px 0 49px 26px;
+		width: 290px;
+		text-align: center;
+	}
+	.main-content-left__button{
+		font: 16px/19px MuseoSansCurl, arial helvetica,sans-serif;
+		padding: 14px 64px 14px 66px;
+		margin: 0 0 0 60px;
+	}
+	.menu__button{
+		display: block;
+		align-items: center;
+		position: fixed;
+		right: 33px;
+		top:46px;
+		width: 25px;
+		height: 3px;
+		cursor:pointer;
+		z-index: 1;
+		margin-top: 19px;
+	}
+
+	.menu__button > span,
+	.menu__button > span::before,
+	.menu__button > span::after{
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 2px;
+		background: #fff;
+	}
+
+	.menu__button > span::before {
+		content: '';
+		top: -8px;
+		transition-duration: .25s;
+	}
+
+	.menu__button > span::after {
+		content: '';
+		top: 8px;
+		transition-duration: .25s;
+	}
+
+	.menu__item_active:after{
+		display: none;
+		transition-duration: .25s;
+	}
+
 
 }
