--- a/style.css
+++ b/style.css
@@ -260,6 +260,10 @@ body{
 		margin: 0 0 0 9px;
 	}
 
+	.main-content-right__image{
+		overflow: 
+	}
+
 	.main-content-right__image_one {
 		width:225px;
 		height:300px;
@@ -275,10 +279,9 @@ body{
 	}
 
 	.main-content-right__image_three {
-		width: 150px;
 		height: 270px;
 		margin: 190px 0 0 23px;
-		background-size: contain;
+		background-size: cover;
 	}
 }
 
@@ -363,7 +366,7 @@ body{
 		width: 318px;
 		height: 226px;
 		background-size: contain;
-		margin: 100px 0 0 0;
+		margin: 0 auto;
 
 	}
 	.main-content-left__title{
