--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body{
 	background: url(image/three-min.png)no-repeat;
 }
 
-@media(min-width: 1366px) and (max-width: 1840px){
+@media (max-width: 1920px){
 	.wrapper{
 			width: 92%
 		}
@@ -196,7 +196,7 @@ body{
 	}
 }
 
-@media(min-width: 1024px) and (max-width: 1360px){
+@media(max-width: 1366px){
 	.wrapper{
 		width: 94%
 	}
@@ -279,6 +279,7 @@ body{
 	}
 
 	.main-content-right__image_three {
+		width: 54px;
 		height: 270px;
 		margin: 190px 0 0 23px;
 		background-size: cover;
@@ -287,7 +288,8 @@ body{
 
 @media(max-width: 1023px){
 	.wrapper{
-		width: 96%
+		width: 96%;
+
 	}
 
 	.logo__liner{
@@ -318,7 +320,9 @@ body{
 		font:500 30px/35px Roboto arial,helvetica,sans-serif;
 		padding-bottom: 24px;
 	}
-
+	.menu__item:nth-child(1){
+		margin: 0 40px 0 0;
+	}
 	.menu__item:nth-child(2){
 		margin: 0 43px 0 0;
 	}
@@ -341,16 +345,18 @@ body{
 
 	#menu__burger:checked ~ .menu__button span{
 		transform:rotate(45deg);
+		background: #000;
 	}
 
 	#menu__burger:checked ~ .menu__button span::before{
-		top: 0;
+		top: 1;
 		transform: rotate(0);
 	}
 
 	#menu__burger:checked ~ .menu__button span::after{
 		top: 0;
 		transform: rotate(90deg);
+		background: #000;
 	}
 
 	#menu__burger:checked ~ .menu {
@@ -362,11 +368,17 @@ body{
 		display: none;
 	}
 
+	.main-content{
+		max-width: 100%;
+		justify-content: center;
+	}
+
 	.main-content-left{
 		width: 318px;
 		height: 226px;
 		background-size: contain;
-		margin: 0 auto;
+		margin: 100px 30px 0 0;
+		justify-content: center;
 
 	}
 	.main-content-left__title{
@@ -378,7 +390,6 @@ body{
 		font: 18px/21px MuseoSansCurl, arial helvetica,sans-serif;
 		margin: 38px 0 49px 26px;
 		width: 290px;
-		text-align: center;
 	}
 
 	.main-content-left__button{
@@ -415,6 +426,8 @@ body{
 		top: -8px;
 		transition-duration: .25s;
 	}
+
+
 
 	.menu__button > span::after {
 		content: '';
